--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 							<%= link_to image_tag('twitter-petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
 						</div>
 						<div class="linkedin-page1">
-							<%= link_to image_tag('linkedin_petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
+							<%= link_to image_tag('linkedin_petit.png', :alt => 'Moutoners'), "http://www.facebook.com/create"%>
 						</div>
 					</div>
 					<div class="row" id="try4">
