--- a/app/views/shared/_user_badge.html.erb
+++ b/app/views/shared/_user_badge.html.erb
@@ -7,6 +7,9 @@
 			<div class="nom">
 				<%= link_to user.fitting_name, user, class: "nom"%>
 			</div>
+			<div class="contexte">
+				<%= user.content%>
+			<div>
 		</div>
 			
 		
