--- a/app/views/users/_profile_badge.html.erb
+++ b/app/views/users/_profile_badge.html.erb
@@ -85,7 +85,7 @@
 	</div>
 	
 	<div class="row" id="stats-profil">
-		<div class="texte1"><%= user.followers.count%></div> <div class="texte2">moutoners</div>
+		<div class="texte1"><%= user.followers.count%></div> <div class="texte2">moutons</div>
 	</div>
 
 	<div class="row" id="stats-profil">
