--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -265,14 +265,15 @@
 
 
 #user-badge{
-	margin-left: 75px;
 	width: 170px;
 	background-color: #AAD0FF;
 	margin-bottom: 30px;
-
+	text-align: center;
+	height: 290px;
+	overflow : hidden;
 	
 	.image1{
-
+	filter: brightness(0.2);
 	margin-left:10px;
 	width: 150px;
 	padding-top:10px;
@@ -290,6 +291,20 @@
 		width: 150px;
 		text-align: center;
 		margin: 10px;
+	}
+	.contexte{
+		height: 60px;
+		overflow : scroll;
+		word-wrap:break-word;
+		font-family:"georgia";
+		font-size: 13px;
+		font-color: black;
+		font-style:italic;
+		width: 150px;
+		text-align: center;
+		margin: 10px;
+		padding-bottom: 10px;
+		border-bottom: 3px Solid white;
 	}
 
 	
