--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,9 +1,12 @@
-<h2>Create a debate</h2>
-
-<%= render "debates/form"%>
-</br>
-</br>
-
-<h2>Create a doulin</h2>
-
-<%= render "doulins/form"%>
+<div class="container">
+	<h2>Create a debate</h2>
+	
+	<%= render "debates/form", value: nil, debate: @debate%>
+	</br>
+	</br>
+	
+	<h2>Create a doulin</h2>
+	
+	<%= render "doulins/form"%>
+	
+</div>
