--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,25 +5,132 @@
 			<%= image_tag @group.avatar.url(:huge), class: "image"%>
 			</div>
 			<div class="image2">
-				<%= image_tag "group-header-01.png", class: "image1"%>
+				<%= image_tag "group-header-01.png", class: "image9"%>
 				<div class='text'><%= link_to @group.title, @group, class: 'text'%></div>
 			</div>
 		</div>
-		<div class='row'>
-			<div class="span3">
+		<div class="row" id="create-debate">
+					<ul class ="row" id ="profile-header">
+							<li class="defi-groupnav">
+								 Défi avec des membres du groupe
+								</li>
+					    	<li class="tiret">|</li>
+							<li class= "debat-groupnav">
+								Débat Ouvert
+							</li>
+					</ul>
+					<div class="papa-challenge">
+					<%= render "challenges/form", challenge: @challenge, value: @group.id%>
+					</div>
+					<div class="papa-debat">
+					<%= render "debates/form", debate: @debate, group: @group.id%>
+					</div>
+					<div class="row" id="fermer-barredebat">
+						<div class="texte">Revenir au groupe</div>
+						<div class="arrow-up"></div>
+					</div>
+		</div>
+		
+		<div class="row" id="papa1">
+			<div class="span3" id="badge-show">
+				<div class="row" id="badge1">
+					<div class="texte">Lancer un débat</div>
+				</div>
+				<div class="row" id="stat-group">
+					<div class="texte"><%= @group.users.count%></div>
+					<div class="texte2">moutons</div>
+				</div>
+				<div class="row" id="stat-group1">
+					<div class="texte"><%= @group.group_debates.count%></div>
+					<div class="texte3">débats internes</div>
+				</div>
+				<div class="row" id="content-group">
+					<%= @group.description%>
+				</div>
+				<div class="row" id="badge1">
+					<div class="texte2">
+					<% if current_user && current_user.in_group_accepted?(@group)%>
+						<%= link_to "Actualité", group_path(@group), class: "texte2"%>
+					<% elsif current_user && current_user.in_group_rejected?(@group)%>
+						<%= link_to "Banni du groupe", group_path(@group), class: "texte2"%>
+					<%elsif current_user && current_user.in_group?(@group)%>
+						<span class="texte2">Demande en cours</span>
+					<% else %>
+						<%= link_to "rejoindre le groupe", rejoindre_group_path(@group), class: "texte2"%>
+					<% end %></div>
+				</div>
+				<div class="row" id="icones-users">
+					<div class="ligne1">
+						<li class="imageuser">
+							<% if @group.users.count >=1 %>
+							<%= link_to image_tag(@group.users.first.avatar.url(:small)), @group.users.first, class: "image1"%>
+							<%end%>
+							</li>
+							<li class="imageuser">
+								<% if @group.users.count >=2 %>
+								<%= link_to image_tag(@group.users.second.avatar.url(:small)), @group.users.second, class: "image2"%>
+								<%end%>
+								</li>
+								<li class="imageuser">
+									<% if @group.users.count >=3 %>
+									<%= link_to image_tag(@group.users.third.avatar.url(:small)), @group.users.third, class: "image3"%>
+									<%end%>
+									</li>
+					</div>
+					<div class="ligne1">
+						<li class="imageuser">
+							<% if @group.users.count >=4 %>
+							<%= link_to image_tag(@group.users[3].avatar.url(:small)), @group.users[3], class: "image1"%>
+							<%end%>
+							</li>
+							<li class="imageuser">
+								<% if @group.users.count >=5 %>
+								<%= link_to image_tag(@group.users[4].avatar.url(:small)), @group.users[4], class: "image2"%>
+								<%end%>
+								</li>
+								<li class="imageuser">
+									<% if @group.users.count >=6 %>
+									<%= link_to image_tag(@group.users[5].avatar.url(:small)), @group.users[5], class: "image3"%><%end%></li>
+					</div>
+				</div>
+				<div class="row" id="voir-tous">
+					<% if current_user && current_user.admin_group?(@group)%>
+						<%= link_to "Ajouter un membre", rajouter_group_path(@group), class: "texte" %>
+					<% else %>
+						<%= link_to "voir tous ...", members_group_path(@group), class: "texte" %>
+					<%end%>
+				</div>				
 			</div>
-			<div class="span7">
+			<div class="span7" id="developpement">
+				<% if current_user && current_user.in_group?(@group)%>
+				<div class="row" id="new-micropost">
+					<%= form_for(@group.microposts.new) do |f| %>
+					<%= render 'shared/error_messages', object: f.object %>
+					<div class="span2" id="userid">
+	                 	<div class="user">
+							<%= image_tag current_user.avatar.url(:medium), class: "image" %>
+						</div>
+						<div class="nom-user">
+	                 	<%= link_to current_user.fitting_name, current_user %>
+	                 	</div>
+					</div>
+					<div class="span4" id='micropostnew'>
+						<div class="field1">
+					    	<%= f.text_area :content, placeholder: " Quelque chose à dire?", class: "field" %>
+						</div>
+						<div class="row">
+							<%= f.submit "publier", class: "submit" %>
+						</div>
+					</div>
+					<% end %>
+				</div>
+				<% end %>
+				<% @group.group_debates.each do |l| %>
+					<div class="row" id='sharing-badges'>
+						<%= render "shared/debate_badge", debate: l%>
+					</div>
+				<% end %>				
 			</div>
 		</div>
 	</div>
 </section>
-<%= @group.title%>
-<% if current_user && current_user.admin_group?(@group) %>
-
-	<%= link_to "RAJOUTER QUELQU'UN EN RESPONSABLE DU GROUP", rajouter_group_path(@group) %>
-	
-	
-	
-<%else %>		
-	Tu es pas admin donc ferme là	
-<% end %>
