--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -408,7 +408,7 @@ input.ajust-input, textarea.ajust-input {
 #doulin-badge{
 	width: 570px;
 	float:left;
-	
+			margin-bottom:15px;
 	#doulinnn{
 		margin-left: 0px;
 	}
@@ -426,11 +426,11 @@ input.ajust-input, textarea.ajust-input {
 			margin-left:0px;
 			
 			#image-doulinuser{
-				margin-left: 15px;
-				margin-top: 5px;
-					img { width: 86px; height:94px;}
+				margin-left: 10px;
+				margin-top: 7px;
+					img { width: 96px; height:94px;}
 					.image{
-						width: 86px;
+						width: 96px;
 						height: 94px;
 					}
 			}
@@ -495,11 +495,11 @@ input.ajust-input, textarea.ajust-input {
 				margin-left:0px;
 
 				#image-doulinuser{
-					margin-left: 15px;
-					margin-top: 5px;
-						img { width: 86px; height:94px;}
+					margin-left: 10px;
+					margin-top: 7px;
+						img { width: 96px; height:94px;}
 						.image{
-							width: 86px;
+							width: 96px;
 							height: 94px;
 						}
 				}
