--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -439,7 +439,8 @@
 		font-style: italic;
 		font-weight: bold;
 		font-size: 20px;
-		margin-left:200px;
+		text-align: center;
+		width: 670px;
 
 
 		li {
