--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,5 +1,10 @@
 <section id='new-challenge'>
 	<div class="container">
+		
+		<div class="row" id="intro-newchallenge">
+			<div class="texte2">Lance un défi, prends position et invite tes adversaires !</div>			
+		</div>
+		
 		<%= render "challenges/form", challenge: @challenge, value: nil%>
 		
 		<div class="row" id="intro-newchallenge2">
