--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -12,7 +12,7 @@
 		<div class="row" id="create-debate">
 					<ul class ="row" id ="profile-header">
 							<li class="defi-groupnav">
-								 Défi avec des membres du groupe
+								 Défi interne
 								</li>
 					    	<li class="tiret">|</li>
 							<li class= "debat-groupnav">
