--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,24 +34,15 @@
       <header>
 		<div class="container">
 			<div class="row" id="tout-enhaut">
-				<div class="gauche">
+				<div id="milieu">
 					<div class="row" id="try2">
 						<%= link_to image_tag('logo.png', :alt => 'Moutoners'), root_path, class: "image1"%>
 					</div>
-					<div class="row" id="try3">
-						<div class="titre">
-							<%= link_to "moutoners", root_path, class: "title"%>
-						</div>
-						<div class="facebook-page1">
-							<%= link_to image_tag('facebook_petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
-						</div>
-						<div class="twitter-page1">
-							<%= link_to image_tag('twitter-petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
-						</div>
-						<div class="linkedin-page1">
-							<%= link_to image_tag('linkedin_petit.png', :alt => 'Moutoners'), "http://www.facebook.com/create"%>
-						</div>
+					<div class="row" id="titre">
+						<%= link_to "moutoners", root_path, class: "title"%>
 					</div>
+				</div>
+				<div id="gauche">
 					<div class="row" id="try4">
 						<% if current_user %>
 						<div class="nom"><%= link_to current_user.fitting_name, current_user, class: "title"%>
@@ -65,8 +56,8 @@
 						<% else %>
 							<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
 							<div class="login"><%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %></div>
-							<div class="login"><%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field"%></div>
-							<span class="login"><%= f.submit "OK", class: "submit-login" %></span>
+							<div class="login"><%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field"%><span class="login"><%= f.submit "OK", class: "submit-login" %></span></div>
+							
 					</div>
 					<div class="row" id="try5">
 						<div class="texte"><%= link_to "Connexion via facebook", user_omniauth_authorize_path(:facebook), class: "lien"%>
@@ -78,9 +69,18 @@
 					</div>
 			</div>
 			
-
-			
-			<div class="droite">
+			<div id="droite">
+				<div class="row" id="try3">
+					<div class="facebook-page1">
+						<%= link_to image_tag('facebook_petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
+					</div>
+					<div class="twitter-page1">
+						<%= link_to image_tag('twitter_petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
+					</div>
+					<div class="linkedin-page1">
+						<%= link_to image_tag('linkedin_petit.png', :alt => 'Moutoners'), "http://www.facebook.com/create"%>
+					</div>
+				</div>
 				<div class ="row", id="debat-nav">
 					<div id="apprendre">
 			        	  <%= link_to "Apprendre à débattre", apprendre_path, class: "apprendre" %>
