--- a/app/views/static_pages/list_debates.html.erb
+++ b/app/views/static_pages/list_debates.html.erb
@@ -1,3 +1,4 @@
+<%= will_paginate @debates%>
 <div class="container" id="index-doulins">
 	<div class="row" id="open-infos">
 		<div class="span11" id="informations-doulin">
@@ -41,6 +42,7 @@
 	
 					<div class="span8" id="list">
 						<%= render "shared/index", :object => @debates %>
+						<%= will_paginate @debates, previous_label: h("<"), next_label: h(">") %>	
 					</div>
 				</div>
 </div>
