--- a/app/views/static_pages/list_challenges.html.erb
+++ b/app/views/static_pages/list_challenges.html.erb
@@ -55,19 +55,19 @@
 
 	  		<li class="tiret">|</li>
 
-			<li class="challenge-bouton">
+			<li class="challenge-bouton1">
 				En attente
 			</li>
 
 	    	<li class="tiret">|</li>
 
-			<li class= "challenge-bouton">
+			<li class= "challenge-bouton2">
 				Brèves
 			</li>
 
 	    	<li class="tiret">|</li>
 
-			<li class="challenge-bouton">
+			<li class="challenge-bouton3">
 				<%= link_to "Nouveau défi", new_challenge_path, class: "challenge-bouton"%>
 			</li>
 
